portfolio section's completely done

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -495,7 +495,7 @@
 							<li data-filter="all" class="filter active"><a href="#">All</a></li>
 							<li data-filter="development" class="filter"><a href="#">Residential</a></li>
 							<li data-filter="photography" class="filter"><a href="#">Corporate</a></li>
-							<li data-filter="design" class="filter"><a href="#">Prizes</a></li>
+							<li data-filter="design" class="filter"><a href="#">Awards</a></li>
 						</ul>
 					</div>
 
@@ -505,37 +505,6 @@
 
 						<div class="row mix-grid">
 
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
-
-								<div class="item-box">
-									<figure>
-										<span class="item-hover">
-											<span class="overlay dark-5"></span>
-											<span class="inner">
-
-												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w1-min.jpg" data-plugin-options='{"type":"image"}'>
-													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-											</span>
-										</span>
-
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w1-min.jpg" width="600" height="399" alt="">
-									</figure>
-
-									<div class="item-box-desc">
-										<h3>Architect Project</h3>
-										<ul class="list-inline categories m-0">
-											<li><a href="#">Architecture</a></li>
-											<li><a href="#">Design</a></li>
-										</ul>
-									</div>
-
-								</div>
-
-							</div><!-- /item -->
-
 
 							<div class="col-md-3 col-sm-3 mix development"><!-- item -->
 
@@ -546,21 +515,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/RES.vaccum.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/RES.vaccum.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Speaker Design</h3>
+										<h3>Three Stories' Tall Home Elevator</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Audio</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Residential Project</a></li>
+											<li><a href="#">Vaccum System</a></li>
 										</ul>
 									</div>
 
@@ -577,21 +546,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/RES.traction.png" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/RES.traction.png" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Speaker Design</h3>
+										<h3>Our First Glass Elevator Without Wall Support</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Audio</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Residential Project</a></li>
+											<li><a href="#">Traction System</a></li>
 										</ul>
 									</div>
 
@@ -608,21 +577,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/RES.mrl.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/RES.mrl.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Speaker Design</h3>
+										<h3>Wall Integrated Home Elevator</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Audio</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Residential Project</a></li>
+											<li><a href="#">MRL System</a></li>
 										</ul>
 									</div>
 
@@ -639,21 +608,52 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w2-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/RES.hydraulic.png" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w2-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/RES.hydraulic.png" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Speaker Design</h3>
+										<h3>Our Simplest Design</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Audio</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Residential Project</a></li>
+											<li><a href="#">Hydraulic System</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/CORP.vaccum,glass.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
+												</a>
+
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/CORP.vaccum,glass.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>Rocket Elevators' Favorite Design</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Corporate Project</a></li>
+											<li><a href="#">Vaccum System</a></li>
 										</ul>
 									</div>
 
@@ -671,21 +671,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w3-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/CORP.traction.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w3-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/CORP.traction.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Mobile Development</h3>
+										<h3>Our Most Complex Projet</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Development</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Corporate Project</a></li>
+											<li><a href="#">Traction System</a></li>
 										</ul>
 									</div>
 
@@ -702,21 +702,52 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w3-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/CORP.mrl,classic.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w3-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/CORP.mrl,classic.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Mobile Development</h3>
+										<h3>Our Most Requested Triple Elevator System</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Development</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Corporate Project</a></li>
+											<li><a href="#">MRL System</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/CORP.hydraulic2.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
+												</a>
+
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/CORP.hydraulic2.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>The Cleanest Design in a Shopping Center</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Corporate Project</a></li>
+											<li><a href="#">Hydraulic System</a></li>
 										</ul>
 									</div>
 
@@ -734,84 +765,20 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w4-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/AW.best design.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w4-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/AW.best design.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Nature Art</h3>
+										<h3>The Most Spacious Elevator in a Mall </h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Nature</a></li>
-											<li><a href="#">Art</a></li>
-										</ul>
-									</div>
-
-								</div>
-
-							</div><!-- /item -->
-
-
-							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
-
-								<div class="item-box">
-									<figure>
-										<span class="item-hover">
-											<span class="overlay dark-5"></span>
-											<span class="inner">
-
-												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w5-min.jpg" data-plugin-options='{"type":"image"}'>
-													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-											</span>
-										</span>
-
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w5-min.jpg" width="600" height="399" alt="">
-									</figure>
-
-									<div class="item-box-desc">
-										<h3>Nature Art</h3>
-										<ul class="list-inline categories m-0">
-											<li><a href="#">Nature</a></li>
-											<li><a href="#">Art</a></li>
-										</ul>
-									</div>
-
-								</div>
-
-							</div><!-- /item -->
-
-
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
-
-								<div class="item-box">
-									<figure>
-										<span class="item-hover">
-											<span class="overlay dark-5"></span>
-											<span class="inner">
-
-												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w6-min.jpg" data-plugin-options='{"type":"image"}'>
-													<span class="fa fa-plus fs-20"></span>
-												</a>
-
-											</span>
-										</span>
-
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w6-min.jpg" width="600" height="399" alt="">
-									</figure>
-
-									<div class="item-box-desc">
-										<h3>Mobile Development</h3>
-										<ul class="list-inline categories m-0">
-											<li><a href="#">Development</a></li>
+											<li><a href="#">Award</a></li>
 											<li><a href="#">Design</a></li>
 										</ul>
 									</div>
@@ -830,21 +797,21 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w7-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/AW.digital.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w7-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/AW.digital.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Nature Art</h3>
+										<h3>The World's Best Digital Control system</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Nature</a></li>
-											<li><a href="#">Art</a></li>
+											<li><a href="#">Award</a></li>
+											<li><a href="#">Futuristic</a></li>
 										</ul>
 									</div>
 
@@ -853,7 +820,7 @@
 							</div><!-- /item -->
 
 
-							<div class="col-md-3 col-sm-3 mix photography"><!-- item -->
+							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
 
 								<div class="item-box">
 									<figure>
@@ -862,27 +829,61 @@
 											<span class="inner">
 
 												<!-- lightbox -->
-												<a class="ico-rounded lightbox" href="demo_files/images/thematics/construction/w3-min.jpg" data-plugin-options='{"type":"image"}'>
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/AW.ropeless.jpg" data-plugin-options='{"type":"image"}'>
 													<span class="fa fa-plus fs-20"></span>
 												</a>
 
 											</span>
 										</span>
 
-										<img class="img-fluid" src="demo_files/images/thematics/construction/w3-min.jpg" width="600" height="399" alt="">
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/AW.ropeless.jpg" width="600" height="399" alt="">
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Mobile Development</h3>
+										<h3>The World's Fastest Gearless Design</h3>
 										<ul class="list-inline categories m-0">
-											<li><a href="#">Development</a></li>
-											<li><a href="#">Design</a></li>
+											<li><a href="#">Award</a></li>
+											<li><a href="#">Improvement</a></li>
 										</ul>
 									</div>
 
 								</div>
 
 							</div><!-- /item -->
+
+							<div class="col-md-3 col-sm-3 mix design"><!-- item -->
+
+								<div class="item-box">
+									<figure>
+										<span class="item-hover">
+											<span class="overlay dark-5"></span>
+											<span class="inner">
+
+												<!-- lightbox -->
+												<a class="ico-rounded lightbox" href="demo_files/images/MY PORTFOLIO/AW.sideways.jpg" data-plugin-options='{"type":"image"}'>
+													<span class="fa fa-plus fs-20"></span>
+												</a>
+
+											</span>
+										</span>
+
+										<img class="img-fluid" src="demo_files/images/MY PORTFOLIO/AW.sideways.jpg" width="600" height="399" alt="">
+									</figure>
+
+									<div class="item-box-desc">
+										<h3>The Safest Sideways Elevator</h3>
+										<ul class="list-inline categories m-0">
+											<li><a href="#">Award</a></li>
+											<li><a href="#">Innovation</a></li>
+										</ul>
+									</div>
+
+								</div>
+
+							</div><!-- /item -->
+
+
+							
 
 
 						</div>
