minor changes, need to restart laptop

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -192,7 +192,7 @@
 					<ul class="hide">
 					
 						<!-- SLIDE  -->
-						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Architectural View">
+						<li data-transition="parallaxtobottom" data-slotamount="7" data-masterspeed="600"  data-saveperformance="off"  data-title="Home">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/RE3.jpg"  alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
@@ -276,7 +276,7 @@
 						</li>
 
 						<!-- SLIDE  -->
-						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
+						<li data-transition="parallaxtotop" data-slotamount="9" data-masterspeed="300"  data-saveperformance="off" data-title="Residential Service">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/RE7.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
@@ -330,7 +330,7 @@
 							</div>
 
 							<!-- SLIDE  -->
-						<li data-transition="parallaxtotop" data-slotamount="7" data-masterspeed="300"  data-saveperformance="off" data-title="Bright Future">
+						<li data-transition="parallaxtotop" data-slotamount="8" data-masterspeed="300"  data-saveperformance="off" data-title="Corporate Service">
 							<!-- MAIN IMAGE -->
 							<img src="demo_files/images/RE1.jpeg" alt="cover image"  data-bgposition="center top" data-bgfit="cover" data-bgrepeat="no-repeat">
 
@@ -650,7 +650,7 @@
 									</figure>
 
 									<div class="item-box-desc">
-										<h3>Rocket Elevators' Favorite Design</h3>
+										<h3>RocketElevators' Favorite Design</h3>
 										<ul class="list-inline categories m-0">
 											<li><a href="#">Corporate Project</a></li>
 											<li><a href="#">Vaccum System</a></li>
@@ -906,10 +906,10 @@
 								<img class="rounded" src="demo_files/images/RE12.png" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
-								<p class="lead">Rocket Elevators' C.E.O.</p>
+								<p class="lead">RocketElevators' C.E.O.</p>
 								<cite>
 									David Amyot
-									<span>Rocket Elevators.</span>
+									<span>RocketElevators.</span>
 								</cite>
 							</div>
 						</div>
@@ -918,10 +918,10 @@
 								<img class="rounded" src="demo_files/images/RE13.jpg" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
-								<p class="lead">This month's best employee at Rocket</p>
+								<p class="lead">This month's best employee at RocketElevators</p>
 								<cite>
 									Émile Bérubé
-									<span>Rocket Elevators.</span>
+									<span>RocketElevators.</span>
 								</cite>
 							</div>
 						</div>
