news section done, missing links

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -965,118 +965,118 @@
 					<div class="owl-carousel owl-padding-10 buttons-autohide controlls-over" data-plugin-options='{"singleItem": false, "items":"4", "autoPlay": 4000, "navigation": true, "pagination": false}'>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/24-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS1.jpg" alt="">
 							</a>
 
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html">Vantage Provides New HW Machines for L.A. Project</a></h4>
+							<p class="text-left">Vantage Elevator Solutions West provided five new gearless machines for Total Access Elevator and a large independent serving the greater Los Angeles area.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20, 2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										1465
 									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/17-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS2.png" alt="">
 							</a>
 
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html"> Florida 47-Story Mixed-Use Tower Design Revealed</a></h4>
+							<p class="text-left">New York-based architecture studio ODA has revealed the design of a new 47-story mixed-use tower in Fort Lauderdale, Florida. We might see this project in about 2 years.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20, 2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										1286
 									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/30-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS3.png" alt="">
 							</a>
 
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html">Touchless footbutton by Hyundai elevator</a></h4>
+							<p class="text-left">Hyundai Elevator Co., South Korea's No. 1 moving solutions provider, said Thursday it developed a new type of lift that can be summoned by a foot movement.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20, 2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										1134
 									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/26-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS4.jpg" alt="">
 							</a>
 
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html">Columbia Elevator Partners With USDE</a></h4>
+							<p class="text-left">Columbia Elevator and US Door Equipment Corp. (USDE), a Fermator company, have entered into a brand new elevator design inspired by both companies.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20, 2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										1528
 									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/18-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS5.jpg" alt="">
 							</a>
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html">16 Escalators, Seven Lifts for Indian Holy Site Skywalk</a></h4>
+							<p class="text-left">Sixteen escalators and seven lifts are part of a 460-m skywalk planned in India. Apparently, this huge project will be completed at the end of 2023.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20, 2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										1371
 									</a>
 								</li>
 							</ul>
 						</div>
 						<div class="img-hover">
 							<a href="blog-single-default.html">
-								<img class="img-fluid" src="demo_files/images/451x300/34-min.jpg" alt="">
+								<img class="img-fluid" src="demo_files/images/News/NEWS6.jpg" alt="">
 							</a>
-							<h4 class="text-left mt-20"><a href="blog-single-default.html">Lorem Ipsum Dolor</a></h4>
-							<p class="text-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, asperiores quod est tenetur in.</p>
+							<h4 class="text-left mt-20"><a href="blog-single-default.html">São Paulo Metro Uses AI to Monitor Elevators</a></h4>
+							<p class="text-left">São Paulo engineers developed an AI system to monitor their own elevators. Some say that RocketElevators might have helped with their AI programs.</p>
 							<ul class="text-left fs-12 list-inline list-separator">
 								<li>
 									<i class="fa fa-calendar"></i> 
-									29th Jan 2017
+									September 20,2022
 								</li>
 								<li>
 									<a href="blog-single-default.html#comments">
 										<i class="fa fa-comments"></i> 
-										3
+										2452
 									</a>
 								</li>
 							</ul>
