added some picture folders

--- a/Smarty/HTML_BS4/index-onepage-construction.html
+++ b/Smarty/HTML_BS4/index-onepage-construction.html
@@ -887,7 +887,7 @@
 					<div class="owl-carousel text-center owl-testimonial m-0" data-plugin-options='{"singleItem": true, "autoPlay": 3500, "navigation": false, "pagination": true, "transitionStyle":"fade"}'>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="demo_files/images/RE12.png" alt="" />
+								<img class="rounded" src="demo_files/images/EMPLOYEES/RE12.png" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
 								<p class="lead">RocketElevators' C.E.O.</p>
@@ -899,7 +899,7 @@
 						</div>
 						<div class="testimonial">
 							<figure>
-								<img class="rounded" src="demo_files/images/RE13.jpg" alt="" />
+								<img class="rounded" src="demo_files/images/EMPLOYEES/RE13.jpg" alt="" />
 							</figure>
 							<div class="testimonial-content p-0">
 								<p class="lead">This month's best employee at RocketElevators</p>
@@ -1086,62 +1086,62 @@
 					<ul class="row clients-dotted list-inline">
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/Amazon_icon.svg.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/Amazon_icon.svg.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/apple-logo-png-dallas-shootings-don-add-are-speech-zones-used-4.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/apple-logo-png-dallas-shootings-don-add-are-speech-zones-used-4.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/bmw-logo-1-1.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/bmw-logo-1-1.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/facebook-logo-icon-facebook-icon-png-images-icons-and-png-backgrounds-1.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/facebook-logo-icon-facebook-icon-png-images-icons-and-png-backgrounds-1.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/meta.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/meta.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/Microsoft-Logo.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/Microsoft-Logo.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/nike.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/nike.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/nissan.png" width='200' height='100' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/nissan.png" width='200' height='100' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/porsche.webp" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/porsche.webp" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/Nvidia_logo.svg.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/Nvidia_logo.svg.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/Tesla_logo.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/Tesla_logo.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 						<li class="col-md-3 col-sm-3 col-6">
 							<a href="#">
-								<img class="img-fluid" src="demo_files/images/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" width='100' height='50' alt="client" />
+								<img class="img-fluid" src="demo_files/images/CUSTOMERS/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" width='100' height='50' alt="client" />
 							</a>
 						</li>
 					</ul>
